--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,14 @@
 			<version>5.7.0</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 
 	<build>
